<resources>
    <string name="app_name">ShelfSense App</string>
    <string name="add_item_button">Add Food Item</string>
    <string name="add_food">Add Food Item</string>
    <string name="food_name">Food Name</string>
    <string name="quantity">Quantity</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="save">Save</string>
    <string name="empty_text">No food items. Add some!</string>
    <string name="donate">Donate</string>
    <string name="contentDesc">Add items and want to donate click on it </string>
    <string name="donateViewText">Donate before it is expire!!!</string>
</resources>