<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".MainActivity"
    tools:ignore="VisualLintBounds">




    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/contentDesc"
        app:srcCompat="@drawable/main"
        tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        tools:ignore="NestedScrolling" />

    <Button
        android:id="@+id/addFoodBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blush"
        android:text="@string/add_food" />

    <TextView
        android:id="@+id/donateViewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/empty_text"
        android:textColor="@color/redPink"
        android:textStyle="bold"
        android:visibility="gone" />
</LinearLayout>